create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1323,7 +1323,7 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
+  background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -1647,7 +1647,7 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
+  background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -2692,7 +2692,7 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
+  background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -3393,7 +3393,7 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
+  background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -3978,7 +3978,7 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
+  background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -4576,7 +4576,7 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
+  background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
@@ -5134,7 +5134,7 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/lady-camisa-1280x640.jpeg");
+  background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
   width: 100%;
