--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -874,7 +874,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-rOYcTy2LbV .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 5.8rem);
+    max-height: calc(98.5vh - 5.9rem);
   }
 }
 .cid-rOYcTy2LbV .collapsed button.navbar-toggler {
@@ -1037,288 +1037,6 @@ section.lazy-placeholder:after {
 }
 .cid-qTkA127IK8 H1 {
   color: #cc2952;
-}
-.cid-rPIOStVqHw.popup-builder {
-  background-color: #ffffff;
-}
-.cid-rPIOStVqHw.popup-builder .modal {
-  position: relative;
-  display: block;
-  z-index: 1;
-}
-.cid-rPIOStVqHw.popup-builder .modal-dialog {
-  margin-top: 60px;
-  margin-bottom: 60px;
-}
-.cid-rPIOStVqHw .modal-content,
-.cid-rPIOStVqHw .modal-dialog {
-  height: auto;
-}
-.cid-rPIOStVqHw .form-wrapper .input-group-btn {
-  margin-right: auto;
-  margin-left: auto;
-}
-.cid-rPIOStVqHw .form-wrapper .input-group-btn .btn {
-  margin: 0 !important;
-}
-@media (min-width: 769px) {
-  .cid-rPIOStVqHw .form-wrapper .mbr-form .form-group,
-  .cid-rPIOStVqHw .form-wrapper .mbr-form .input-group-btn {
-    padding: 0 .5rem;
-  }
-}
-.cid-rPIOStVqHw .card-img {
-  width: 100%;
-  margin: auto;
-  border-radius: 0;
-}
-.cid-rPIOStVqHw .mbr-figure img {
-  display: block;
-  width: 100%;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-rPIOStVqHw .mbr-text {
-  text-align: center;
-  color: #131313;
-}
-.cid-rPIOStVqHw .pt-0 {
-  padding-top: 0 !important;
-}
-.cid-rPIOStVqHw .pb-0 {
-  padding-bottom: 0 !important;
-}
-.cid-rPIOStVqHw .form-content {
-  -ms-flex-pack: center;
-  justify-content: center;
-  text-align: center;
-}
-.cid-rPIOStVqHw .mbr-overlay {
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 0;
-  pointer-events: none;
-}
-.cid-rPIOStVqHw .modal-open {
-  overflow: hidden;
-}
-.cid-rPIOStVqHw .modal-open .modal {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-.cid-rPIOStVqHw .modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1050;
-  display: none;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  outline: 0;
-}
-.cid-rPIOStVqHw .modal-dialog {
-  position: relative;
-  width: auto;
-  margin: .5rem;
-  pointer-events: none;
-}
-.cid-rPIOStVqHw .modal.fade .modal-dialog {
-  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-  -webkit-transform: translate(0, -50px);
-  transform: translate(0, -50px);
-}
-.cid-rPIOStVqHw .modal.show .modal-dialog {
-  -webkit-transform: none;
-  transform: none;
-}
-.cid-rPIOStVqHw .modal-dialog-centered {
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  min-height: calc(100% - (.5rem * 2));
-}
-.cid-rPIOStVqHw .modal-dialog-centered::before {
-  display: block;
-  height: calc(100vh - (.5rem * 2));
-  content: "";
-}
-.cid-rPIOStVqHw .modal-content {
-  background: #c1c1c1;
-  position: relative;
-  display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
-  pointer-events: auto;
-  background-clip: padding-box;
-  border: none;
-  outline: 0;
-  -webkit-box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
-}
-.cid-rPIOStVqHw .modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1040;
-  width: 100vw;
-  height: 100vh;
-  background-color: #000;
-}
-.cid-rPIOStVqHw .modal-backdrop.fade {
-  opacity: 0;
-}
-.cid-rPIOStVqHw .modal-backdrop.show {
-  opacity: .5;
-}
-.cid-rPIOStVqHw .modal-header {
-  display: flex;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 1rem;
-  border-bottom: none;
-}
-.cid-rPIOStVqHw .modal-header .close {
-  position: absolute;
-  top: auto;
-  right: 1rem;
-  margin: -1rem -1rem -1rem auto;
-  padding: 1rem;
-  opacity: .75;
-}
-.cid-rPIOStVqHw .modal-header .close:hover {
-  opacity: 1;
-}
-.cid-rPIOStVqHw .modal-header .close:focus {
-  outline: none;
-}
-.cid-rPIOStVqHw .modal-title {
-  line-height: 1.5;
-  width: 100%;
-  margin: 0;
-  text-align: center;
-  color: #ff3366;
-}
-.cid-rPIOStVqHw .modal-body {
-  position: relative;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  padding: 1rem;
-  min-height: 100%;
-}
-.cid-rPIOStVqHw .modal-footer {
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding: 1rem;
-  border-top: none;
-  text-align: center;
-}
-.cid-rPIOStVqHw .modal-scrollbar-measure {
-  position: absolute;
-  top: -9999px;
-  width: 50px;
-  height: 50px;
-  overflow: scroll;
-}
-@media (min-width: 576px) {
-  .cid-rPIOStVqHw .modal-dialog {
-    max-width: 500px;
-    margin: 1.75rem auto;
-  }
-  .cid-rPIOStVqHw .modal-dialog-centered {
-    min-height: calc(100% - (1.75rem * 2));
-  }
-  .cid-rPIOStVqHw .modal-dialog-centered::before {
-    height: calc(100vh - (1.75rem * 2));
-  }
-  .cid-rPIOStVqHw .modal-sm {
-    max-width: 300px;
-  }
-  .cid-rPIOStVqHw .container {
-    max-width: 540px;
-  }
-}
-@media (min-width: 992px) {
-  .cid-rPIOStVqHw .modal-lg,
-  .cid-rPIOStVqHw .modal-xl {
-    max-width: 800px;
-  }
-  .cid-rPIOStVqHw .container {
-    max-width: 960px;
-  }
-}
-@media (min-width: 1200px) {
-  .cid-rPIOStVqHw .modal-xl {
-    max-width: 1140px;
-  }
-  .cid-rPIOStVqHw .container {
-    max-width: 1140px;
-  }
-}
-.cid-rPIOStVqHw .container {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-@media (min-width: 768px) {
-  .cid-rPIOStVqHw .container {
-    max-width: 720px;
-  }
-}
-.cid-rPIOStVqHw .row {
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-.cid-rPIOStVqHw .col-md-4 {
-  position: relative;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  -ms-flex: 0 0 33.333333%;
-  flex: 0 0 33.333333%;
-  max-width: 33.333333%;
-}
-.cid-rPIOStVqHw .form-group {
-  margin-bottom: 1rem;
-}
-.cid-rPIOStVqHw .form-control {
-  display: block;
-  width: 100%;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-}
-.cid-rPIOStVqHw .col {
-  -ms-flex-preferred-size: 0;
-  flex-basis: 0;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
-  max-width: 100%;
-}
-.cid-rPIOStVqHw .col-md-auto {
-  position: relative;
-  padding-right: 15px;
-  padding-left: 15px;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  width: auto;
-  max-width: 100%;
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
@@ -1967,7 +1685,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-rOYcTy2LbV .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 5.8rem);
+    max-height: calc(98.5vh - 5.5rem);
   }
 }
 .cid-rOYcTy2LbV .collapsed button.navbar-toggler {
@@ -3821,7 +3539,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-rOYcTy2LbV .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 5.8rem);
+    max-height: calc(98.5vh - 5.5rem);
   }
 }
 .cid-rOYcTy2LbV .collapsed button.navbar-toggler {
@@ -4896,7 +4614,7 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 1024px) {
   .cid-rOYcTy2LbV .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 5.8rem);
+    max-height: calc(98.5vh - 5.5rem);
   }
 }
 .cid-rOYcTy2LbV .collapsed button.navbar-toggler {
@@ -5084,52 +4802,78 @@ section.lazy-placeholder:after {
 .cid-rPsBAOZa6N H2 {
   color: #cc2952;
 }
-.cid-rPfWnlW650 {
+.cid-rQc7rZW6xT {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #000000;
+}
+.cid-rQc7rZW6xT .mbr-text {
+  color: #767676;
+}
+.cid-rQc7rZW6xT .mbr-text p {
+  background: #131313;
+}
+.cid-rQc9avATVo {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #000000;
 }
-.cid-rPfWnlW650 .line {
+.cid-rQc9avATVo .line {
   background-color: #cc2952;
   color: #cc2952;
   align: center;
   height: 2px;
   margin: 0 auto;
 }
-.cid-rPfWnlW650 .section-text {
+.cid-rQc9avATVo .section-text {
   padding: 2rem 0;
   color: #848282;
 }
-.cid-rPfWnlW650 .inner-container {
+.cid-rQc9avATVo .inner-container {
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-rPfWnlW650 .inner-container {
+  .cid-rQc9avATVo .inner-container {
     width: 100% !important;
   }
 }
-.cid-rPfVhqBAiu {
-  background: #ffffff;
+.cid-rQcaGZyWD5 {
+  background: #000000;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-.cid-rPfVhqBAiu .image-block {
+.cid-rQcaGZyWD5 .video-block {
   margin: auto;
-  width: 100% !important;
-}
-.cid-rPfVhqBAiu .mbr-figure {
-  margin: 0 auto;
-}
-.cid-rPfVhqBAiu figcaption {
-  position: relative;
-}
-.cid-rPfVhqBAiu figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
 @media (max-width: 768px) {
-  .cid-rPfVhqBAiu .image-block {
+  .cid-rQcaGZyWD5 .video-block {
     width: 100% !important;
   }
+}
+.cid-rQcbdbhzaT {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #000000;
+}
+.cid-rQcbdbhzaT .mbr-text {
+  color: #767676;
+}
+.cid-rQcbdbhzaT .mbr-text p {
+  background: #131313;
+}
+.cid-rQcbdbhzaT .mbr-text P {
+  text-align: center;
+}
+.cid-rQccf6ToTC {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #000000;
+}
+.cid-rQccf6ToTC .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rQccf6ToTC H2 {
+  color: #cc2952;
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
