create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4804,7 +4804,7 @@ section.lazy-placeholder:after {
 }
 .cid-rQc7rZW6xT {
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
   background-color: #000000;
 }
 .cid-rQc7rZW6xT .mbr-text {
@@ -4813,29 +4813,19 @@ section.lazy-placeholder:after {
 .cid-rQc7rZW6xT .mbr-text p {
   background: #131313;
 }
-.cid-rQc9avATVo {
-  padding-top: 30px;
-  padding-bottom: 30px;
+.cid-rQcfF9z8Mo {
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #000000;
 }
-.cid-rQc9avATVo .line {
-  background-color: #cc2952;
-  color: #cc2952;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
+.cid-rQcfF9z8Mo .mbr-text {
+  color: #767676;
 }
-.cid-rQc9avATVo .section-text {
-  padding: 2rem 0;
-  color: #848282;
+.cid-rQcfF9z8Mo .mbr-text p {
+  background: #131313;
 }
-.cid-rQc9avATVo .inner-container {
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-rQc9avATVo .inner-container {
-    width: 100% !important;
-  }
+.cid-rQcfF9z8Mo .mbr-text P {
+  text-align: left;
 }
 .cid-rQcaGZyWD5 {
   background: #000000;
