--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4771,7 +4771,7 @@ section.lazy-placeholder:after {
 .cid-rPfUMy9xUg {
   padding-top: 90px;
   padding-bottom: 0px;
-  background-color: #131313;
+  background-color: #000000;
 }
 .cid-rPfUMy9xUg P {
   color: #767676;
@@ -4780,11 +4780,12 @@ section.lazy-placeholder:after {
   color: #cc2952;
 }
 .cid-rPfV7Q0Zkr {
-  background: #ffffff;
+  background: #000000;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .cid-rPfV7Q0Zkr .video-block {
   margin: auto;
-  width: 100% !important;
 }
 @media (max-width: 768px) {
   .cid-rPfV7Q0Zkr .video-block {
@@ -4803,7 +4804,7 @@ section.lazy-placeholder:after {
   color: #cc2952;
 }
 .cid-rQc7rZW6xT {
-  padding-top: 60px;
+  padding-top: 15px;
   padding-bottom: 0px;
   background-color: #000000;
 }
@@ -4814,7 +4815,7 @@ section.lazy-placeholder:after {
   background: #131313;
 }
 .cid-rQcfF9z8Mo {
-  padding-top: 0px;
+  padding-top: 15px;
   padding-bottom: 0px;
   background-color: #000000;
 }
