create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6393,41 +6393,41 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-rSKy38jTFr.popup-builder {
+.cid-rSKAKwGJLn.popup-builder {
   background-color: #ffffff;
 }
-.cid-rSKy38jTFr.popup-builder .modal {
+.cid-rSKAKwGJLn.popup-builder .modal {
   position: relative;
   display: block;
   z-index: 1;
 }
-.cid-rSKy38jTFr.popup-builder .modal-dialog {
+.cid-rSKAKwGJLn.popup-builder .modal-dialog {
   margin-top: 60px;
   margin-bottom: 60px;
 }
-.cid-rSKy38jTFr .modal-content,
-.cid-rSKy38jTFr .modal-dialog {
+.cid-rSKAKwGJLn .modal-content,
+.cid-rSKAKwGJLn .modal-dialog {
   height: auto;
 }
-.cid-rSKy38jTFr .form-wrapper .input-group-btn {
+.cid-rSKAKwGJLn .form-wrapper .input-group-btn {
   margin-right: auto;
   margin-left: auto;
 }
-.cid-rSKy38jTFr .form-wrapper .input-group-btn .btn {
+.cid-rSKAKwGJLn .form-wrapper .input-group-btn .btn {
   margin: 0 !important;
 }
 @media (min-width: 769px) {
-  .cid-rSKy38jTFr .form-wrapper .mbr-form .form-group,
-  .cid-rSKy38jTFr .form-wrapper .mbr-form .input-group-btn {
+  .cid-rSKAKwGJLn .form-wrapper .mbr-form .form-group,
+  .cid-rSKAKwGJLn .form-wrapper .mbr-form .input-group-btn {
     padding: 0 .5rem;
   }
 }
-.cid-rSKy38jTFr .card-img {
+.cid-rSKAKwGJLn .card-img {
   width: 100%;
   margin: auto;
   border-radius: 0;
 }
-.cid-rSKy38jTFr .mbr-figure img {
+.cid-rSKAKwGJLn .mbr-figure img {
   display: block;
   width: 100%;
   -ms-flex-item-align: center;
@@ -6435,21 +6435,21 @@ section.lazy-placeholder:after {
   -webkit-align-self: center;
   align-self: center;
 }
-.cid-rSKy38jTFr .mbr-text {
+.cid-rSKAKwGJLn .mbr-text {
   text-align: center;
 }
-.cid-rSKy38jTFr .pt-0 {
+.cid-rSKAKwGJLn .pt-0 {
   padding-top: 0 !important;
 }
-.cid-rSKy38jTFr .pb-0 {
+.cid-rSKAKwGJLn .pb-0 {
   padding-bottom: 0 !important;
 }
-.cid-rSKy38jTFr .form-content {
+.cid-rSKAKwGJLn .form-content {
   -ms-flex-pack: center;
   justify-content: center;
   text-align: center;
 }
-.cid-rSKy38jTFr .mbr-overlay {
+.cid-rSKAKwGJLn .mbr-overlay {
   bottom: 0;
   left: 0;
   position: absolute;
@@ -6458,14 +6458,14 @@ section.lazy-placeholder:after {
   z-index: 0;
   pointer-events: none;
 }
-.cid-rSKy38jTFr .modal-open {
+.cid-rSKAKwGJLn .modal-open {
   overflow: hidden;
 }
-.cid-rSKy38jTFr .modal-open .modal {
+.cid-rSKAKwGJLn .modal-open .modal {
   overflow-x: hidden;
   overflow-y: auto;
 }
-.cid-rSKy38jTFr .modal {
+.cid-rSKAKwGJLn .modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -6476,33 +6476,33 @@ section.lazy-placeholder:after {
   overflow: hidden;
   outline: 0;
 }
-.cid-rSKy38jTFr .modal-dialog {
+.cid-rSKAKwGJLn .modal-dialog {
   position: relative;
   width: auto;
   margin: .5rem;
   pointer-events: none;
 }
-.cid-rSKy38jTFr .modal.fade .modal-dialog {
+.cid-rSKAKwGJLn .modal.fade .modal-dialog {
   transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
   -webkit-transform: translate(0, -50px);
   transform: translate(0, -50px);
 }
-.cid-rSKy38jTFr .modal.show .modal-dialog {
+.cid-rSKAKwGJLn .modal.show .modal-dialog {
   -webkit-transform: none;
   transform: none;
 }
-.cid-rSKy38jTFr .modal-dialog-centered {
+.cid-rSKAKwGJLn .modal-dialog-centered {
   display: flex;
   -ms-flex-align: center;
   align-items: center;
   min-height: calc(100% - (.5rem * 2));
 }
-.cid-rSKy38jTFr .modal-dialog-centered::before {
+.cid-rSKAKwGJLn .modal-dialog-centered::before {
   display: block;
   height: calc(100vh - (.5rem * 2));
   content: "";
 }
-.cid-rSKy38jTFr .modal-content {
+.cid-rSKAKwGJLn .modal-content {
   background: #ffffff;
   position: relative;
   display: flex;
@@ -6516,7 +6516,7 @@ section.lazy-placeholder:after {
   -webkit-box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
 }
-.cid-rSKy38jTFr .modal-backdrop {
+.cid-rSKAKwGJLn .modal-backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -6525,13 +6525,13 @@ section.lazy-placeholder:after {
   height: 100vh;
   background-color: #000;
 }
-.cid-rSKy38jTFr .modal-backdrop.fade {
+.cid-rSKAKwGJLn .modal-backdrop.fade {
   opacity: 0;
 }
-.cid-rSKy38jTFr .modal-backdrop.show {
+.cid-rSKAKwGJLn .modal-backdrop.show {
   opacity: .5;
 }
-.cid-rSKy38jTFr .modal-header {
+.cid-rSKAKwGJLn .modal-header {
   display: flex;
   -ms-flex-align: start;
   align-items: flex-start;
@@ -6540,7 +6540,7 @@ section.lazy-placeholder:after {
   padding: 1rem;
   border-bottom: none;
 }
-.cid-rSKy38jTFr .modal-header .close {
+.cid-rSKAKwGJLn .modal-header .close {
   position: absolute;
   top: auto;
   right: 1rem;
@@ -6548,27 +6548,27 @@ section.lazy-placeholder:after {
   padding: 1rem;
   opacity: .75;
 }
-.cid-rSKy38jTFr .modal-header .close:hover {
+.cid-rSKAKwGJLn .modal-header .close:hover {
   opacity: 1;
 }
-.cid-rSKy38jTFr .modal-header .close:focus {
+.cid-rSKAKwGJLn .modal-header .close:focus {
   outline: none;
 }
-.cid-rSKy38jTFr .modal-title {
+.cid-rSKAKwGJLn .modal-title {
   line-height: 1.5;
   width: 100%;
   margin: 0;
   text-align: center;
   color: #ff3366;
 }
-.cid-rSKy38jTFr .modal-body {
+.cid-rSKAKwGJLn .modal-body {
   position: relative;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1rem;
   min-height: 100%;
 }
-.cid-rSKy38jTFr .modal-footer {
+.cid-rSKAKwGJLn .modal-footer {
   display: flex;
   -ms-flex-align: center;
   align-items: center;
@@ -6578,7 +6578,7 @@ section.lazy-placeholder:after {
   border-top: none;
   text-align: center;
 }
-.cid-rSKy38jTFr .modal-scrollbar-measure {
+.cid-rSKAKwGJLn .modal-scrollbar-measure {
   position: absolute;
   top: -9999px;
   width: 50px;
@@ -6586,41 +6586,41 @@ section.lazy-placeholder:after {
   overflow: scroll;
 }
 @media (min-width: 576px) {
-  .cid-rSKy38jTFr .modal-dialog {
+  .cid-rSKAKwGJLn .modal-dialog {
     max-width: 500px;
     margin: 1.75rem auto;
   }
-  .cid-rSKy38jTFr .modal-dialog-centered {
+  .cid-rSKAKwGJLn .modal-dialog-centered {
     min-height: calc(100% - (1.75rem * 2));
   }
-  .cid-rSKy38jTFr .modal-dialog-centered::before {
+  .cid-rSKAKwGJLn .modal-dialog-centered::before {
     height: calc(100vh - (1.75rem * 2));
   }
-  .cid-rSKy38jTFr .modal-sm {
+  .cid-rSKAKwGJLn .modal-sm {
     max-width: 300px;
   }
-  .cid-rSKy38jTFr .container {
+  .cid-rSKAKwGJLn .container {
     max-width: 540px;
   }
 }
 @media (min-width: 992px) {
-  .cid-rSKy38jTFr .modal-lg,
-  .cid-rSKy38jTFr .modal-xl {
+  .cid-rSKAKwGJLn .modal-lg,
+  .cid-rSKAKwGJLn .modal-xl {
     max-width: 800px;
   }
-  .cid-rSKy38jTFr .container {
+  .cid-rSKAKwGJLn .container {
     max-width: 960px;
   }
 }
 @media (min-width: 1200px) {
-  .cid-rSKy38jTFr .modal-xl {
+  .cid-rSKAKwGJLn .modal-xl {
     max-width: 1140px;
   }
-  .cid-rSKy38jTFr .container {
+  .cid-rSKAKwGJLn .container {
     max-width: 1140px;
   }
 }
-.cid-rSKy38jTFr .container {
+.cid-rSKAKwGJLn .container {
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
@@ -6628,18 +6628,18 @@ section.lazy-placeholder:after {
   margin-left: auto;
 }
 @media (min-width: 768px) {
-  .cid-rSKy38jTFr .container {
+  .cid-rSKAKwGJLn .container {
     max-width: 720px;
   }
 }
-.cid-rSKy38jTFr .row {
+.cid-rSKAKwGJLn .row {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
 }
-.cid-rSKy38jTFr .col-md-4 {
+.cid-rSKAKwGJLn .col-md-4 {
   position: relative;
   width: 100%;
   padding-right: 15px;
@@ -6648,24 +6648,24 @@ section.lazy-placeholder:after {
   flex: 0 0 33.333333%;
   max-width: 33.333333%;
 }
-.cid-rSKy38jTFr .form-group {
+.cid-rSKAKwGJLn .form-group {
   margin-bottom: 1rem;
 }
-.cid-rSKy38jTFr .form-control {
+.cid-rSKAKwGJLn .form-control {
   display: block;
   width: 100%;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
 }
-.cid-rSKy38jTFr .col {
+.cid-rSKAKwGJLn .col {
   -ms-flex-preferred-size: 0;
   flex-basis: 0;
   -ms-flex-positive: 1;
   flex-grow: 1;
   max-width: 100%;
 }
-.cid-rSKy38jTFr .col-md-auto {
+.cid-rSKAKwGJLn .col-md-auto {
   position: relative;
   padding-right: 15px;
   padding-left: 15px;
