--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7182,7 +7182,7 @@ section.lazy-placeholder:after {
 }
 .cid-rSL2QRAPkf {
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rSL2QRAPkf .mbr-text {
@@ -7229,6 +7229,9 @@ section.lazy-placeholder:after {
   .cid-rSLkrd1K4t .image-block {
     width: 100% !important;
   }
+}
+.cid-rSLkrd1K4t DIV {
+  color: #131313;
 }
 .cid-rSLex9J0Ae {
   padding-top: 60px;
