--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7231,7 +7231,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rSLkrd1K4t DIV {
-  color: #131313;
+  color: #ff3366;
 }
 .cid-rSLex9J0Ae {
   padding-top: 60px;
