--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6305,6 +6305,14 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-rSz2SZWZgh H2 {
+  color: #ffffff;
+}
+.cid-rSLwcd8rVh {
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/lady-camisa-1280x640.jpg");
+}
+.cid-rSLwcd8rVh H1 {
   color: #ff3366;
 }
 .cid-rSz1S6pRJK {
@@ -6392,287 +6400,6 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-rSKAKwGJLn.popup-builder {
-  background-color: #ffffff;
-}
-.cid-rSKAKwGJLn.popup-builder .modal {
-  position: relative;
-  display: block;
-  z-index: 1;
-}
-.cid-rSKAKwGJLn.popup-builder .modal-dialog {
-  margin-top: 60px;
-  margin-bottom: 60px;
-}
-.cid-rSKAKwGJLn .modal-content,
-.cid-rSKAKwGJLn .modal-dialog {
-  height: auto;
-}
-.cid-rSKAKwGJLn .form-wrapper .input-group-btn {
-  margin-right: auto;
-  margin-left: auto;
-}
-.cid-rSKAKwGJLn .form-wrapper .input-group-btn .btn {
-  margin: 0 !important;
-}
-@media (min-width: 769px) {
-  .cid-rSKAKwGJLn .form-wrapper .mbr-form .form-group,
-  .cid-rSKAKwGJLn .form-wrapper .mbr-form .input-group-btn {
-    padding: 0 .5rem;
-  }
-}
-.cid-rSKAKwGJLn .card-img {
-  width: 100%;
-  margin: auto;
-  border-radius: 0;
-}
-.cid-rSKAKwGJLn .mbr-figure img {
-  display: block;
-  width: 100%;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-rSKAKwGJLn .mbr-text {
-  text-align: center;
-}
-.cid-rSKAKwGJLn .pt-0 {
-  padding-top: 0 !important;
-}
-.cid-rSKAKwGJLn .pb-0 {
-  padding-bottom: 0 !important;
-}
-.cid-rSKAKwGJLn .form-content {
-  -ms-flex-pack: center;
-  justify-content: center;
-  text-align: center;
-}
-.cid-rSKAKwGJLn .mbr-overlay {
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 0;
-  pointer-events: none;
-}
-.cid-rSKAKwGJLn .modal-open {
-  overflow: hidden;
-}
-.cid-rSKAKwGJLn .modal-open .modal {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-.cid-rSKAKwGJLn .modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1050;
-  display: none;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  outline: 0;
-}
-.cid-rSKAKwGJLn .modal-dialog {
-  position: relative;
-  width: auto;
-  margin: .5rem;
-  pointer-events: none;
-}
-.cid-rSKAKwGJLn .modal.fade .modal-dialog {
-  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-  -webkit-transform: translate(0, -50px);
-  transform: translate(0, -50px);
-}
-.cid-rSKAKwGJLn .modal.show .modal-dialog {
-  -webkit-transform: none;
-  transform: none;
-}
-.cid-rSKAKwGJLn .modal-dialog-centered {
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  min-height: calc(100% - (.5rem * 2));
-}
-.cid-rSKAKwGJLn .modal-dialog-centered::before {
-  display: block;
-  height: calc(100vh - (.5rem * 2));
-  content: "";
-}
-.cid-rSKAKwGJLn .modal-content {
-  background: #ffffff;
-  position: relative;
-  display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
-  pointer-events: auto;
-  background-clip: padding-box;
-  border: none;
-  outline: 0;
-  -webkit-box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
-}
-.cid-rSKAKwGJLn .modal-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1040;
-  width: 100vw;
-  height: 100vh;
-  background-color: #000;
-}
-.cid-rSKAKwGJLn .modal-backdrop.fade {
-  opacity: 0;
-}
-.cid-rSKAKwGJLn .modal-backdrop.show {
-  opacity: .5;
-}
-.cid-rSKAKwGJLn .modal-header {
-  display: flex;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding: 1rem;
-  border-bottom: none;
-}
-.cid-rSKAKwGJLn .modal-header .close {
-  position: absolute;
-  top: auto;
-  right: 1rem;
-  margin: -1rem -1rem -1rem auto;
-  padding: 1rem;
-  opacity: .75;
-}
-.cid-rSKAKwGJLn .modal-header .close:hover {
-  opacity: 1;
-}
-.cid-rSKAKwGJLn .modal-header .close:focus {
-  outline: none;
-}
-.cid-rSKAKwGJLn .modal-title {
-  line-height: 1.5;
-  width: 100%;
-  margin: 0;
-  text-align: center;
-  color: #ff3366;
-}
-.cid-rSKAKwGJLn .modal-body {
-  position: relative;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  padding: 1rem;
-  min-height: 100%;
-}
-.cid-rSKAKwGJLn .modal-footer {
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding: 1rem;
-  border-top: none;
-  text-align: center;
-}
-.cid-rSKAKwGJLn .modal-scrollbar-measure {
-  position: absolute;
-  top: -9999px;
-  width: 50px;
-  height: 50px;
-  overflow: scroll;
-}
-@media (min-width: 576px) {
-  .cid-rSKAKwGJLn .modal-dialog {
-    max-width: 500px;
-    margin: 1.75rem auto;
-  }
-  .cid-rSKAKwGJLn .modal-dialog-centered {
-    min-height: calc(100% - (1.75rem * 2));
-  }
-  .cid-rSKAKwGJLn .modal-dialog-centered::before {
-    height: calc(100vh - (1.75rem * 2));
-  }
-  .cid-rSKAKwGJLn .modal-sm {
-    max-width: 300px;
-  }
-  .cid-rSKAKwGJLn .container {
-    max-width: 540px;
-  }
-}
-@media (min-width: 992px) {
-  .cid-rSKAKwGJLn .modal-lg,
-  .cid-rSKAKwGJLn .modal-xl {
-    max-width: 800px;
-  }
-  .cid-rSKAKwGJLn .container {
-    max-width: 960px;
-  }
-}
-@media (min-width: 1200px) {
-  .cid-rSKAKwGJLn .modal-xl {
-    max-width: 1140px;
-  }
-  .cid-rSKAKwGJLn .container {
-    max-width: 1140px;
-  }
-}
-.cid-rSKAKwGJLn .container {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-@media (min-width: 768px) {
-  .cid-rSKAKwGJLn .container {
-    max-width: 720px;
-  }
-}
-.cid-rSKAKwGJLn .row {
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-.cid-rSKAKwGJLn .col-md-4 {
-  position: relative;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  -ms-flex: 0 0 33.333333%;
-  flex: 0 0 33.333333%;
-  max-width: 33.333333%;
-}
-.cid-rSKAKwGJLn .form-group {
-  margin-bottom: 1rem;
-}
-.cid-rSKAKwGJLn .form-control {
-  display: block;
-  width: 100%;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-}
-.cid-rSKAKwGJLn .col {
-  -ms-flex-preferred-size: 0;
-  flex-basis: 0;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
-  max-width: 100%;
-}
-.cid-rSKAKwGJLn .col-md-auto {
-  position: relative;
-  padding-right: 15px;
-  padding-left: 15px;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  width: auto;
-  max-width: 100%;
 }
 .cid-rOYcTy2LbV .navbar {
   padding: .5rem 0;
