--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6299,7 +6299,7 @@ section.lazy-placeholder:after {
 .cid-rSz2SZWZgh {
   padding-top: 120px;
   padding-bottom: 60px;
-  background-color: #131313;
+  background-color: #000000;
 }
 .cid-rSz2SZWZgh .mbr-section-subtitle {
   color: #767676;
@@ -6315,6 +6315,29 @@ section.lazy-placeholder:after {
 .cid-rT2WY3BWyA H1 {
   color: #ff3366;
 }
+.cid-rT312KKXJ9 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-rT312KKXJ9 .line {
+  background-color: #000000;
+  color: #000000;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rT312KKXJ9 .section-text {
+  padding: 2rem 0;
+}
+.cid-rT312KKXJ9 .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rT312KKXJ9 .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-rSLwcd8rVh {
   padding-top: 135px;
   padding-bottom: 135px;
@@ -6322,6 +6345,29 @@ section.lazy-placeholder:after {
 }
 .cid-rSLwcd8rVh H1 {
   color: #ff3366;
+}
+.cid-rT32b8Yuaf {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-rT32b8Yuaf .line {
+  background-color: #000000;
+  color: #000000;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rT32b8Yuaf .section-text {
+  padding: 2rem 0;
+}
+.cid-rT32b8Yuaf .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rT32b8Yuaf .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-rSz1S6pRJK {
   padding-top: 135px;
