create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9907,7 +9907,7 @@ section.lazy-placeholder:after {
 .cid-rVzXipvYwh {
   padding-top: 90px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/pexels-photo-1863939-1880x1253.jpeg");
+  background-image: url("../../../assets/images/pexels-photo-1863939-1880x1253.jpg");
 }
 .cid-rVzXipvYwh H2 {
   color: #ff3366;
@@ -9966,6 +9966,24 @@ section.lazy-placeholder:after {
 .cid-rVzZp71vwA .mbr-text {
   color: #767676;
 }
+.cid-rVAm8lvdRt {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVAm8lvdRt .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVAm8lvdRt .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVAm8lvdRt .mbr-text {
+  color: #767676;
+}
 .cid-rVA4Ch067t {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -10002,6 +10020,60 @@ section.lazy-placeholder:after {
 .cid-rVAf0Breit .mbr-text {
   color: #767676;
 }
+.cid-rVArDMr2DB {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVArDMr2DB .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVArDMr2DB .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVArDMr2DB .mbr-text {
+  color: #767676;
+}
+.cid-rVAoQJZ036 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVAoQJZ036 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVAoQJZ036 .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVAoQJZ036 .mbr-text {
+  color: #767676;
+}
+.cid-rVAnWuWgkE {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVAnWuWgkE .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVAnWuWgkE .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVAnWuWgkE .mbr-text {
+  color: #767676;
+}
 .cid-rVA047EYrY {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -10018,6 +10090,24 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rVA047EYrY .mbr-text {
+  color: #767676;
+}
+.cid-rVAt1Dulde {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVAt1Dulde .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVAt1Dulde .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVAt1Dulde .mbr-text {
   color: #767676;
 }
 .cid-rPJyv7S1OG {
