create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9905,9 +9905,9 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rVzXipvYwh {
-  padding-top: 90px;
+  padding-top: 105px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/pexels-photo-1863939-1880x1253.jpg");
+  background-image: url("../../../assets/images/marcozero.jpg");
 }
 .cid-rVzXipvYwh H2 {
   color: #ff3366;
@@ -9930,6 +9930,24 @@ section.lazy-placeholder:after {
 .cid-rVAd542L65 .mbr-text {
   color: #767676;
 }
+.cid-rVABHf6sja {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVABHf6sja .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVABHf6sja .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVABHf6sja .mbr-text {
+  color: #767676;
+}
 .cid-rVA2ZUW4gx {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -9946,6 +9964,24 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rVA2ZUW4gx .mbr-text {
+  color: #767676;
+}
+.cid-rVB4Hv1LNw {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVB4Hv1LNw .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVB4Hv1LNw .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVB4Hv1LNw .mbr-text {
   color: #767676;
 }
 .cid-rVzZp71vwA {
@@ -10002,6 +10038,24 @@ section.lazy-placeholder:after {
 .cid-rVA4Ch067t .mbr-text {
   color: #767676;
 }
+.cid-rVB7O3U53x {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVB7O3U53x .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVB7O3U53x .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVB7O3U53x .mbr-text {
+  color: #767676;
+}
 .cid-rVAf0Breit {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -10056,6 +10110,24 @@ section.lazy-placeholder:after {
 .cid-rVAoQJZ036 .mbr-text {
   color: #767676;
 }
+.cid-rVB61UfeXG {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVB61UfeXG .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVB61UfeXG .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVB61UfeXG .mbr-text {
+  color: #767676;
+}
 .cid-rVAnWuWgkE {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -10090,6 +10162,24 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rVA047EYrY .mbr-text {
+  color: #767676;
+}
+.cid-rVB78lrNF7 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rVB78lrNF7 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rVB78lrNF7 .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rVB78lrNF7 .mbr-text {
   color: #767676;
 }
 .cid-rVAt1Dulde {
