--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9444,6 +9444,24 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-rWTq0VIkyw {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rWTq0VIkyw .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rWTq0VIkyw .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rWTq0VIkyw .mbr-text {
+  color: #767676;
+}
 .cid-rWJ5rsNzzE {
   padding-top: 60px;
   padding-bottom: 60px;
