--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -12747,7 +12747,7 @@ section.lazy-placeholder:after {
 .cid-rWUyaLRf2q {
   padding-top: 120px;
   padding-bottom: 120px;
-  background-image: url("../../../assets/images/dsc01241-2000x1124.jpeg");
+  background-image: url("../../../assets/images/mbr-1920x1275.jpg");
 }
 .cid-rWUyaLRf2q H2 {
   color: #ff3366;
